--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
             cd /root/resource/nginx
             ls -al
             rm -rf deploy-test
-            git clone git@github.com:sam9831/deploy-test.git
+            git clone git@github.com:sam9831/deploy-test.git -b ${{ github.ref_name }}
             cd deploy-test
             npm install
             npm run build
